# stonkify

./: README.md  pyproject.toml
stonkify/cv/: __init__.py  patch_embed.py  vit_featurizer.py
stonkify/data/: __init__.py  base.py  constants.py  data.py  helpers.py  nlp_data.py
stonkify/news/: __init__.py  base.py  retrieval.py
stonkify/nlp/: __init__.py  base.py  flair_nlp.py  inference.py
stonkify/price/: __init__.py  base.py  norm_strategies.py  retrieval.py
stonkify/scrapers/: __init__.py  base.py  google_news.py  request_modifiers.py
stonkify/testground/: testground1.py
tests/cv/: tests.py
tests/news/: tests.py
tests/price/: tests.py
