[tool.poetry]
name = "stonkify"
version = "0.0.1"
description = "\"Python tools for stock market analyis driven by NLP and deep reinforcement learning\""
authors = ["Raymond Biju <raymondbiju@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytorch = "^1.0.2"
pytorch-lightning = "^1.8.0.post1"
numpy = "^1.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
